--- a/rhd-social-icons.css
+++ b/rhd-social-icons.css
@@ -2,15 +2,37 @@
  * Basic stylesheet for the RHD Social Icons plugin by Roundhouse Designs
  **/
 
-.rhd-social-icons-entries input {
-	width: 245px;
+.rhd_social_widget,
+.social-button {
+	box-sizing: border-box;
 }
 
-ul.social-widget {
+.rhd_social_widget {
 	list-style: none;
 	padding: 0;
 }
 
-ul.social-widget li {
+.rhd_social-horizontal li {
 	display: inline-block;
+}
+
+.rhd_social-vertical {
+	width: auto;
+	height: auto;
+	position: fixed;
+	top: 23vh;
+	right: 0;
+	background: black;
+	padding: 0.5em 0 0.25em 0;
+}
+
+.rhd_social-vertical li {
+	width: 100%;
+	display: block;
+	padding: 0 0.35em;
+}
+
+.rhd_social-vertical li .instagram  {
+	position: relative;
+	left: 0.2em;
 }
