--- a/rhd-social-icons.css
+++ b/rhd-social-icons.css
@@ -21,7 +21,7 @@
 	height: auto;
 	position: fixed;
 	top: 23vh;
-	right: 0;
+	left: 0;
 	background: black;
 	padding: 0.5em 0 0.25em 0;
 	z-index: 999;
